# ultravision

./: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh
docs/: README.md  cli.md  development.md  overview.md  web.md
tests/: conftest.py  test_api.py  test_cli.py  test_discovery.py  test_images.py  test_util.py  test_writer.py
ultravision/: README.md  pyproject.toml  requirements.txt
ultravision/ultravision/: __init__.py  __main__.py  api.py  cli.py  discovery.py  images.py  util.py  writer.py
ultravision/ultravision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ultravision/ultravision/web/: __init__.py  server.py
ultravision/ultravision/web/static/: index.html
ultravision/ultravision/web/static/css/: styles.css
ultravision/ultravision/web/static/js/: app.js
